Expose v2 send message API with the capabilities to say if it is async or no - in progress
