# docs/swagger.yaml
@@ -84,7 +84,6 @@ definitions:
         type: array
     type: object
   model.Message:
-    description: wraps all needed information for the notification
     properties:
       body:
         type: string
@@ -110,6 +109,7 @@ definitions:
         type: array
       sender:
         $ref: '#/definitions/model.Sender'
+        type: object
       subject:
         type: string
       topic:
@@ -129,6 +129,7 @@ definitions:
         type: string
       user:
         $ref: '#/definitions/CoreUserRef'
+        type: object
     type: object
   sendMailRequestBody:
     properties:
@@ -166,8 +167,7 @@ paths:
       produces:
       - text/plain
       responses:
-        "200":
-          description: ""
+        "200": {}
       security:
       - AdminUserAuth: []
       tags:
@@ -179,8 +179,7 @@ paths:
       produces:
       - text/plain
       responses:
-        "200":
-          description: ""
+        "200": {}
       security:
       - AdminUserAuth: []
       tags:
@@ -243,8 +242,7 @@ paths:
       produces:
       - text/plain
       responses:
-        "200":
-          description: ""
+        "200": {}
       security:
       - AdminUserAuth: []
       tags:
@@ -366,16 +364,38 @@ paths:
       produces:
       - text/plain
       responses:
-        "200":
-          description: ""
+        "200": {}
       security:
       - InternalAuth: []
       tags:
       - Internal
   /int/message:
     post:
+      deprecated: true
       description: Sends a message to a user, list of users or a topic
       operationId: InternalSendMessage
+      parameters:
+      - description: body json
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.Message'
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Message'
+      security:
+      - InternalAuth: []
+      tags:
+      - Internal
+  /int/v2/message:
+    post:
+      description: Sends a message to a user, list of users or a topic
+      operationId: InternalSendMessageV2
       parameters:
       - description: body json
         in: body
@@ -430,8 +450,7 @@ paths:
       produces:
       - text/plain
       responses:
-        "200":
-          description: ""
+        "200": {}
       security:
       - UserAuth: []
       tags:
@@ -472,8 +491,7 @@ paths:
         schema:
           $ref: '#/definitions/getMessagesRequestBody'
       responses:
-        "200":
-          description: ""
+        "200": {}
       security:
       - UserAuth: []
       tags:
@@ -536,8 +554,7 @@ paths:
         schema:
           $ref: '#/definitions/TokenInfo'
       responses:
-        "200":
-          description: ""
+        "200": {}
       security:
       - RokwireAuth UserAuth: []
       tags:
@@ -604,8 +621,7 @@ paths:
         schema:
           $ref: '#/definitions/tokenBody'
       responses:
-        "200":
-          description: ""
+        "200": {}
       security:
       - RokwireAuth UserAuth: []
       tags:
@@ -627,8 +643,7 @@ paths:
         schema:
           $ref: '#/definitions/tokenBody'
       responses:
-        "200":
-          description: ""
+        "200": {}
       security:
       - RokwireAuth UserAuth: []
       tags:
@@ -712,8 +727,7 @@ paths:
       produces:
       - text/plain
       responses:
-        "200":
-          description: ""
+        "200": {}
       security:
       - RokwireAuth: []
       tags:
